# Tavily-TakeHome

./: .env.example  .gitignore  .vercelignore  README.md  Technical Statement.md  artifacts.py  charts.py  developmental_stages.md  improvements.md  index.html  marketdata.py  portfolio.py  portfolio_analysis_design.md  portfolio_tool.py  pyproject.toml  quant.py  requirements.txt  starter_agent.py  tavily_maxer.py  vercel.json  webapp.py
Demo/: AAPL_SPCX.csv  research.txt
Traces/: session_summaries
api/: ask.py
docs/: 2606_Tavily_FDE_TakeHomeAssignment.md  output.md  setup.md
eval/: dataset.jsonl  judge.py  run_eval.py
evals/: dataset.csv  dataset.md  questions.json  run_samples.py
lib/: portfolio_tool.py
logs/: runs.jsonl
src/grounded/: __init__.py  cli.py  config.py  observability.py  pipeline.py  retrieval.py  schemas.py  verify.py
tests/: conftest.py  test_artifacts.py  test_charts.py  test_marketdata.py  test_portfolio.py  test_portfolio_tool.py  test_quant.py  test_retrieval.py  test_schemas.py  test_tavily_maxer.py  test_verify.py
