[project]
name = "tavily-maxer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.0.0",
  "langchain-nebius>=0.1.0",
  "langchain-tavily>=0.2.0",
  "langsmith>=0.1.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
