[project]
name = "tavily-maxer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.0.0",
  "langchain-nebius>=0.1.0",
  "langchain-tavily>=0.2.0",
  "langsmith>=0.1.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
portfolio = [
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scipy>=1.17.1",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Vercel's native Python runtime serves the deployment from this single WSGI app
# (defined in webapp.py). Without this, Vercel can't tell which `app` to use and the
# build fails with "No python entrypoint found".
[tool.vercel]
entrypoint = "webapp:app"
