[project]
name = "tavily-maxer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.0.0",
  "langchain-nebius>=0.1.0",
  "langchain-tavily>=0.2.0",
  "langsmith>=0.1.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
  # Portfolio stack. These must be in the main dependency list (not an optional extra)
  # because Vercel's native Python runtime installs only [project.dependencies] -- an
  # extra would be skipped and the analyze endpoint would ModuleNotFoundError on pandas.
  # They're still imported lazily at runtime, so research requests don't pay for them.
  # scipy is deliberately excluded (replaced by an in-house normal dist in quant.py) to
  # keep the serverless bundle under Vercel's size limit.
  "numpy>=2.0",
  "pandas>=2.0",
  "plotly>=6.0",
  "yfinance>=0.2",
  "openpyxl>=3.1",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Vercel's native Python runtime serves the deployment from this single WSGI app
# (defined in webapp.py). Without this, Vercel can't tell which `app` to use and the
# build fails with "No python entrypoint found".
[tool.vercel]
entrypoint = "webapp:app"
